--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,6 @@ services:
       - 127.0.0.1:9618:9618
     environment:
       INTERVAL       : "15s"
-      ADGUARD_SERVERS: "${ADGUARD_SERVERS}"
-      ADGUARD_USERNAMES: "${ADGUARD_USERNAMES}"
-      ADGUARD_PASSWORDS: "${ADGUARD_PASSWORDS}"
+      ADGUARD_SERVERS: "${ADGUARD_SERVERS:-}"
+      ADGUARD_USERNAMES: "${ADGUARD_USERNAMES:-}"
+      ADGUARD_PASSWORDS: "${ADGUARD_PASSWORDS:-}"
